# difficultAirway

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
data/: raw.dvc
docs/: data_freeze_memo.md  manuscript.md
notebooks/: demo.py
src/airway/: __init__.py  baseline_model.py  bootstrap_ci.py  calibration.py  clinical_baseline.py  clinical_comparison.py  config.py  data_audit.py  data_freeze.py  decision_curve.py  delong.py  error_analysis.py  explainability.py  face_align.py  face_crops.py  face_embeddings.py  face_features.py  face_model.py  fusion.py  loaders.py  make_dummy_data.py  pilot_report.py  predictions.py  quarantine.py  scores.py  splits.py  subgroups.py  ultrasound_features.py  ultrasound_model.py
tests/: conftest.py  test_pipeline.py
tests/tests/: test_bootstrap.py  test_clinical_baseline.py  test_decision_curve.py  test_error_analysis.py  test_explainability.py  test_subgroups.py  test_week1214.py  test_week2.py  test_week3.py  test_week45.py  test_week67.py  test_week811.py
